--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 <script>
 
 // const WIN_COLOR = "#00A100";
-const WIN_COLOR = "#A10000";
+//const WIN_COLOR = "#A10000";
+    const WIN_COLOR = "#000000";
 
 const AUDIOS = {
     "o": "o.wav",
